Fix exporting multiple keys to keyserver at once

BUG:154528

svn path=/branches/KDE/3.5/kdeutils/kgpg/; revision=822717